# fast_API

./: .gitignore  pyproject.toml
fast_API/: main.py  schemas.py
tests/: conftest.py  test_main.py
